# duckduckgo-api-haystack

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: run_tests.yaml
duckduckgo_api_haystack/: __init__.py  duckduckgoapi.py
duckduckgo_api_websearch/: __init__.py  duckduckgoapi.py
tests/: test_duckduckgoapi.py
