[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duckduckgo-api-haystack"
version = '0.1.12'
description = "A Haystack component integrating Duckduckgo API for WebSearch"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Giovanni Alzetta", email = "giovannialzetta@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/GivAlz/duckduckgo_api_websearch"

[tool.setuptools.packages.find]
include = ["duckduckgo_api_haystack*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
